--- a/aws-cloudformation/aws-Project.yml
+++ b/aws-cloudformation/aws-Project.yml
@@ -4,14 +4,14 @@ Description: |
   This template launches an EC2 instance which enables SSH.
 
 Resources:
-  aws-CFN-Instance:
+  CFNInstance:
     Type: AWS::EC2::Instance
     Properties:
       ImageId: ami-08e4e35cccc6189f4
       InstanceType: t2.micro
       KeyName: firstkey # Please use your own key name without .pem
       SecurityGroups: 
-        - cfn-sec-group
+        - My-First-Security-Group
       Tags:
         - Key: Name
           Value: Cfn-Instance
