--- a/aws/Project-101-kittens-carousel-static-website-ec2/aws-cfn-temp.yml
+++ b/aws/Project-101-kittens-carousel-static-website-ec2/aws-cfn-temp.yml
@@ -7,8 +7,12 @@ Resources:
     Properties:
       ImageId: "ami-08e4e35cccc6189f4"
       InstanceType: "t2.micro"
+      KeyName: firstkey
       SecurityGroups:
         - My-First-Security-Group
+      Tags:
+        - Key: Name
+          Value: CfnInstance
       UserData:
         Fn::Base64:
           !Sub |
