--- a/aws/Project-004-Phonebook-Application/phonebook_template.yml
+++ b/aws/Project-004-Phonebook-Application/phonebook_template.yml
@@ -83,7 +83,7 @@ Resources:
                 pip3 install flask
                 pip3 install flask_mysql
                 echo "${MyDBURI}" > /home/ec2-user/dbserver.endpoint
-                TOKEN="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"
+                TOKEN="XXXXXXXXXXXXX" # add TOKEN
                 FOLDER="https://$TOKEN@raw.githubusercontent.com/fevzitopcu/private-my-projects/main/Project-004-Phonebook-Application/"
                 curl -s --create-dirs -o "/home/ec2-user/templates/index.html" -L "$FOLDER"templates/index.html
                 curl -s --create-dirs -o "/home/ec2-user/templates/add-update.html" -L "$FOLDER"templates/add-update.html
